<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:onClick="actionclick"
        android:id="@+id/left_actionbar"
        android:contentDescription="@string/left_actionbar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@mipmap/icc_launcher"/>
    <View
        android:background="@color/view_color"
        android:layout_width="1px"
        android:layout_height="40dp"/>
    <TextView
        android:id="@+id/tv_actionbar"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/actionbar_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"/>
    <View
    android:background="@color/view_color"
    android:layout_width="1px"
    android:layout_height="40dp"/>

    <ImageView
        android:onClick="actionclick"
        android:id="@+id/right_actionbar"
        android:contentDescription="@string/right_actionbar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@mipmap/ic_child_configs"/>

</LinearLayout>